# TTRPG-Authentic-Personal-Assistant-TAPA

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agents_core/: prompts.py  state.py  utils.py
agents_core/agents/: base_agent.py  primary_agent.py  rag_agent.py  sheet_agent.py
bot/: handlers.py  main.py  session.py
config/: settings.py
graph/: builder.py
notebooks/: ingestion_pipeline.ipynb
services/: __init__.py  embedder_model_manager.py  html.py  scraper.py  sheet_parser.py  text_patterns.py  text_processing.py  vector_store.py
tasks/: agent_launch_pipeline.ipynb  embed_model_launch.py  ingestion_pipeline.ipynb
tests/: test_agent_routing.py  test_scraper.py  test_session.py  test_sheet_parser.py
