[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tapa"
version = "0.1.0"
description = "TTRPG Authentic Personal Assistant — multi-agent system for tabletop RPG players"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "langgraph>=1.0",
    "langgraph-prebuilt>=1.0",
    "langchain-openai>=1.0",
    "langchain-chroma>=0.2",
    "langchain-text-splitters>=0.3",
    "chromadb>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pypdf>=5.0",
]

[project.optional-dependencies]
embedder = [
    "torch>=2.0",
    "transformers>=5.0",
    "accelerate",
]
bot = [
    "aiogram>=3.0",
    "torch>=2.0",
    "transformers>=5.0",
    "accelerate",
]
scraper = [
    "httpx>=0.28",
    "beautifulsoup4>=4.0",
    "lxml>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
    "ipykernel>=7.0",
]
all = [
    "tapa[embedder,bot,scraper,dev]",
]

[tool.setuptools.packages.find]
include = ["agents_core*", "bot*", "config*", "graph*", "services*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
